Resolved (inconsistent naming, duplicates, tokens issues, warings, Final APIs test)